# scratch-remixtree

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: keep_warm.yml  publish.yml  test-cli.yml
CLI/: main.py  tree_async.py
api/: node.py  tree_async.py
remixtree/: __init__.py  main.py  node.py  tree_builder.py
remixtree_cli/: api.py  main.py  tree_builder.py  ugly_stuff.py
tests/: node.py  tree.py  tree_async.py
web/backend/: main.py  requirements.txt
web/frontend/: index.html  script.js  styles.css
web/frontend-construction/: index.html  script.js  style.css
web/sapi-proxy/src/: index.js
