[project]
name = "remixtree"
dynamic = ["version"]
description = "remake scratch's remix tree feature #BringBackRemixTrees"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "aiohttp",
    "rich"
]

authors = [{ name = "Alastrantia", email = "example@email.com" }]

[project.urls]
Homepage = "https://github.com/Alastrantia/scratch-remixtree"
BugTracker = "https://github.com/Alastrantia/scratch-remixtree/issues"

[project.scripts]
remixtree = "remixtree_cli.main:main_sync"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
names = ["remixtree"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Education",
]

readme = { file = "README.md", content-type = "text/markdown" }